# LR7

./: CMakeLists.txt
Task_1/: Task_1.cpp  h.h  main.cpp
Task_2/: Task_2.cpp  h.h  main.cpp
Task_3/: Task_3.cpp  h.h  main.cpp
Task_4/: Task_4.cpp  h.h  main.cpp
Task_5/: Task_5.cpp  h.h  main.cpp
